hphp/hack/test/ifc/check/mut_array_access.php.exp
=== IFC analysis results for mut_array_access.php
File "mut_array_access.php", line 51, characters 3-29:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "mut_array_access.php", line 9, characters 16-26:
  This may be the data source with policy `PRIVATE`
  File "mut_array_access.php", line 11, characters 16-25:
  This may be the data sink with policy `PUBLIC`
  File "mut_array_access.php", line 49, characters 3-38:
  Another program point contributing to the illegal flow
File "mut_array_access.php", line 44, characters 3-29:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "mut_array_access.php", line 9, characters 16-26:
  This may be the data source with policy `PRIVATE`
  File "mut_array_access.php", line 11, characters 16-25:
  This may be the data sink with policy `PUBLIC`
  File "mut_array_access.php", line 42, characters 3-38:
  Another program point contributing to the illegal flow
File "mut_array_access.php", line 37, characters 3-42:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "mut_array_access.php", line 9, characters 16-26:
  This may be the data source with policy `PRIVATE`
  File "mut_array_access.php", line 11, characters 16-25:
  This may be the data sink with policy `PUBLIC`
File "mut_array_access.php", line 31, characters 3-27:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "mut_array_access.php", line 14, characters 14-22:
  This may be the data source with policy `PRIVATE`
  File "mut_array_access.php", line 16, characters 14-21:
  This may be the data sink with policy `PUBLIC`
  File "mut_array_access.php", line 29, characters 3-34:
  Another program point contributing to the illegal flow
File "mut_array_access.php", line 24, characters 3-29:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "mut_array_access.php", line 9, characters 16-26:
  This may be the data source with policy `PRIVATE`
  File "mut_array_access.php", line 11, characters 16-25:
  This may be the data sink with policy `PUBLIC`
  File "mut_array_access.php", line 22, characters 3-36:
  Another program point contributing to the illegal flow
